KVM: Add 14 CPUID check test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -10,6 +10,21 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        # SRF
+        - avx_ifma:
+            features = "AVX_IFMA"
+        - avx_vnni_int8:
+            features = "AVX_VNNI_INT8"
+        - avx_ne_convert:
+            features = "AVX_NE_CONVERT"
+        - cmpccxadd:
+            features = "CMPCCXADD"
+        # GNR
+        - amx_fp16:
+            features = "AMX_FP16"
+        - prefetchi:
+            features = "PREFETCHI"
+        # SPR
         - avx512_fp16:
             # The name should be same as the KEY/s in cpuid_info dictionary
             # "BM/instruction-check/feature_list.py"
@@ -26,20 +41,37 @@
             features = "AMX_INT8"
         - amx_tile:
             features = "AMX_TILE"
-        - amx_fp16:
-            features = "AMX_FP16"
-        - prefetchi:
-            features = "PREFETCHI"
-        - avx_ifma:
-            features = "AVX_IFMA"
-        - avx_vnni_int8:
-            features = "AVX_VNNI_INT8"
-        - avx_ne_convert:
-            features = "AVX_NE_CONVERT"
-        - cmpccxadd:
-            features = "CMPCCXADD"
+        - xfd:
+            features = "XFD"
+        - movdiri:
+            features = "MOVDIRI"
+        - movdir64b:
+            features = "MOVDIR64B"
+        - waitpkg:
+            features = "WAITPKG"
+        - cldemote:
+            features = "CLDEMOTE"
+        # ICX
         - umip:
             features = "UMIP"
+        - avx512_ifma:
+            features = "AVX512_IFMA"
+        - avx512_vbmi:
+            features = "AVX512_VBMI"
+        - avx512_vbmi2:
+            features = "AVX512_VBMI2"
+        - avx512_vnni:
+            features = "AVX512_VNNI"
+        - avx512_bitalg:
+            features = "AVX512_BITALG"
+        - gfni:
+            features = "GFNI"
+        - vaes:
+            features = "VAES"
+        - vpclmulqdq:
+            features = "VPCLMULQDQ"
+        - sha_ni:
+            features = "SHA_NI"
     variants:
         - vm:
         - tdvm:
