KVM: Add 20 cpu flags check test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -7,13 +7,30 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
-        - tsc_deadline:
-            flags = "tsc_deadline_timer"
-            variants:
-                - default:
-                - disable:
-                    cpu_model_flags = ",-tsc-deadline"
-                    no_flags = "tsc_deadline_timer"
+        # SPR
+        - avx512_fp16:
+            flags = "avx512_fp16"
+        - serialize:
+            flags = "serialize"
+        - tsxldtrk:
+            flags = "tsxldtrk"
+        - avx_vnni:
+            flags = "avx_vnni"
+        - amx_bf16:
+            flags = "amx_bf16"
+        - amx_int8:
+            flags = "amx_int8"
+        - amx_tile:
+            flags = "amx_tile"
+        - movdiri:
+            flags = "movdiri"
+        - movdir64b:
+            flags = "movdir64b"
+        - waitpkg:
+            flags = "waitpkg"
+        - cldemote:
+            flags = "cldemote"
+        # ICX
         - umip:
             flags = "umip"
             variants:
@@ -21,6 +38,32 @@
                 - disable:
                     cpu_model_flags = ",-umip"
                     no_flags = "umip"
+        - avx512_ifma:
+            flags = "avx512ifma"
+        - avx512_vbmi:
+            flags = "avx512vbmi"
+        - avx512_vbmi2:
+            flags = "avx512_vbmi2"
+        - avx512_vnni:
+            flags = "avx512_vnni"
+        - avx512_bitalg:
+            flags = "avx512_bitalg"
+        - gfni:
+            flags = "gfni"
+        - vaes:
+            flags = "vaes"
+        - vpclmulqdq:
+            flags = "vpclmulqdq"
+        - sha_ni:
+            flags = "sha_ni"
+        # legacy
+        - tsc_deadline:
+            flags = "tsc_deadline_timer"
+            variants:
+                - default:
+                - disable:
+                    cpu_model_flags = ",-tsc-deadline"
+                    no_flags = "tsc_deadline_timer"
     variants:
         - vm:
             # Only No-TDVM supports soft reboot
