KVM: Add MWAIT/MONITOR test cases
3 mwait test cases for TD
3 mwait test cases for Non-TD
Also add MWAIT/MONITOR in instruction-check

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -79,6 +79,14 @@
                 - disable:
                     cpu_model_flags = ",-tsc-deadline"
                     no_flags = "tsc_deadline_timer"
+        - mwait:
+            flags = "monitor"
+            variants:
+                - enable:
+                    cpu-pm = on
+                - disable:
+                    cpu-pm = off
+                    no_flags = "monitor"
     variants:
         - vm:
             # Only No-TDVM supports soft reboot
