--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -76,6 +76,9 @@
             features = "VPCLMULQDQ"
         - sha_ni:
             features = "SHA_NI"
+        - mwait:
+            features = "MONITOR"
+            cpu-pm = on
     variants:
         - vm:
         - tdvm:
