Add vfio_net_boot cases for tdx
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/vfio_net_boot.cfg
+++ b/KVM/qemu/vfio_net_boot.cfg
@@ -7,7 +7,7 @@
     # setup_hostdev_slots = 0000:00:00.1
     hostdev_bind_driver = vfio-pci
     vm_hostdev_driver = vfio-pci
-    ext_host = linux-ftp.intel.com
+    ext_host = kernel.org
     variants:
         - single_vm:
             vms = "vm1"
@@ -25,9 +25,6 @@
         - vf:
             hostdev_assignment_type = vf
             hostdev_vf_counts = 4
-    variants ip_version:
-        - ipv4:
-        - ipv6:
     variants:
         - @default:
         # multi hostdev will be bound to the same iommufd
@@ -56,3 +53,10 @@
         - @default:
         - hugepage:
             hugepage = yes
+    variants:
+        - vm:
+        - tdvm:
+            vm_secure_guest_type = tdx
+            machine_type_extra_params = "kernel-irqchip=split"
+            auto_cpu_model = "no"
+            cpu_model = "host"
