Specify ipv4 for vfio_net_boot cases
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/vfio_net_boot.cfg
+++ b/KVM/qemu/vfio_net_boot.cfg
@@ -11,6 +11,8 @@
     vms = "vm1"
     vm_hostdevs = hostdev1
     hostdev_assignment_type = pf
+    variants ip_version:
+        - ipv4:
     variants:
         - @default:
         - iommufd:
