KVM: rename TDX disable ept case and add disable tdx test case
tdx_disable.ept
tdx_disable.tdx

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/tdx_disable.cfg
+++ b/KVM/qemu/tdx_disable.cfg
@@ -1,6 +1,6 @@
-- td_disable_ept:
+- tdx_disable:
     virt_test_type = qemu
-    type = td_disable_ept
+    type = tdx_disable
     vm_accelerator = kvm
     machine_type_extra_params = "kernel-irqchip=split"
     vm_secure_guest_type = tdx
@@ -11,7 +11,11 @@
     xfail = "yes"
     expected_status = 'N'
     default_status = 'Y'
-    parameter_name = 'ept'
+    variants:
+        - ept:
+            parameter_name = 'ept'
+        - tdx:
+            parameter_name = 'tdx'
     pre_command = 'modprobe -r kvm_intel && modprobe kvm_intel ${parameter_name}=${expected_status}'
     post_command = 'modprobe -r kvm_intel && modprobe kvm_intel ${parameter_name}=${default_status}'
     check_status_cmd = 'cat /sys/module/kvm_intel/parameters/${parameter_name}'
