Increate dma_entry_limit for TDX vfio_net_boot cases without iommufd
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/vfio_net_boot.cfg
+++ b/KVM/qemu/vfio_net_boot.cfg
@@ -15,6 +15,7 @@
         - ipv4:
     variants:
         - @default:
+            dma_cmd = "echo 0x200000 > /sys/module/vfio_iommu_type1/parameters/dma_entry_limit"
         - iommufd:
             vm_hostdev_iommufd = iommufd0
     variants:
