KVM: Add AVX512 cpu flags tests for Skylake server
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -72,6 +72,16 @@
         - sha_ni:
             flags = "sha_ni"
         # legacy
+        - avx512_f:
+            flags = "avx512f"
+        - avx512_cd:
+            flags = "avx512cd"
+        - avx512_bw:
+            flags = "avx512bw"
+        - avx512_dq:
+            flags = "avx512dq"
+        - avx512_vl:
+            flags = "avx512vl"
         - tsc_deadline:
             flags = "tsc_deadline_timer"
             variants:
