KVM: Add 5 AVX512 cpuid check test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -76,6 +76,17 @@
             features = "VPCLMULQDQ"
         - sha_ni:
             features = "SHA_NI"
+        # legacy
+        - avx512_f:
+            features = "AVX512_F"
+        - avx512_cd:
+            features = "AVX512_CD"
+        - avx512_bw:
+            features = "AVX512_BW"
+        - avx512_dq:
+            features = "AVX512_DQ"
+        - avx512_vl:
+            features = "AVX512_VL"
         - mwait:
             features = "MONITOR"
             cpu-pm = on
