Add a new para sleep_after_powerdown for some cases which need more time to release resource
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/td_huge_resource.cfg
+++ b/KVM/qemu/td_huge_resource.cfg
@@ -10,9 +10,12 @@
     cpu_model = host
     variants:
         - half:
+            sleep_after_powerdown = 30
         - max_vcpus:
             check_host_cpu = "yes"
+            sleep_after_powerdown = 60
         - out_max_vcpus:
             # TD can not boot up with vCPU number larger than host pCPU
             overrange_host_cpu = "yes"
             xfail = "yes"
+            sleep_after_powerdown = 60
