KVM: Add 5 AMX CPUID checking test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -55,6 +55,16 @@
             features = "WAITPKG"
         - cldemote:
             features = "CLDEMOTE"
+        - amx_tile_leaf:
+            cpuid = "1d 0 0 0 a 0:31 1"
+        - amx_tile_palette:
+            cpuid = "1d 0 1 0 a 0:15 8192, 1d 0 1 0 a 16:31 1024, 1d 0 1 0 b 0:15 64, 1d 0 1 0 b 16:31 8, 1d 0 1 0 c 0:15 16"
+        - amx_tmul:
+            cpuid = "1e 0 0 0 b 0:7 16, 1e 0 0 0 b 8:23 64"
+        - amx_xtileconfig:
+            cpuid = "d 0 0x11 0 a 0:31 64, d 0 0x11 0 b 0:31 2752, d 0 0x11 0 c 0:0 0, d 0 0x11 0 c 1, d 0 0x11 0 c 2:2 0"
+        - amx_xtiledata:
+            cpuid = "d 0 0x12 0 a 0:31 8192, d 0 0x12 0 b 0:31 2816, d 0 0x12 0 c 0:0 0, d 0 0x12 0 c 1, d 0 0x12 0 c 2"
         # ICX
         - umip:
             features = "UMIP"
