KVM: refactor SMP test
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/smp.cfg
+++ b/KVM/qemu/smp.cfg
@@ -1,6 +1,6 @@
-- cpuinfo_check:
+- smp:
     no Windows
-    type = cpuinfo_check
+    type = smp
     virt_test_type = qemu
     vm_accelerator = kvm
     force_create_image = no
@@ -9,6 +9,11 @@
     kill_vm = yes
     auto_cpu_model = "no"
     cpu_model = host
+    variants:
+        - cpuinfo_chk:
+            test_tool = cpuinfo_chk.c
+        - mem_coh:
+            test_tool = mem_coh.c
     variants:
         - vm:
         - tdvm:
