KVM: Add SMP affinity 3 test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/smp.cfg
+++ b/KVM/qemu/smp.cfg
@@ -14,6 +14,12 @@
             test_tool = cpuinfo_chk.c
         - mem_coh:
             test_tool = mem_coh.c
+        - affinity_getting:
+            test_tool = affinity_getting.c
+        - affinity_setting:
+            test_tool = affinity_setting.c
+        - affinity_inherit:
+            test_tool = affinity_inherit.c
     variants:
         - vm:
         - tdvm:
