KVM: Add AMX functionality test case
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -16,6 +16,9 @@
             feature_dir_names = "lass"
         - umip:
             feature_dir_names = "umip"
+        - amx:
+            feature_dir_names = "amx"
+            cmd_timeout = 500
     variants:
         - vm:
         - tdvm:
