KVM: add 2 5-level paging test cases for TD and Non-TD
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -71,6 +71,8 @@
             flags = "vpclmulqdq"
         - sha_ni:
             flags = "sha_ni"
+        - 5lp:
+            flags = "la57"
         # legacy
         - avx512_f:
             flags = "avx512f"
