--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -86,6 +86,8 @@
             features = "VPCLMULQDQ"
         - sha_ni:
             features = "SHA_NI"
+        - 5lp:
+            features = "5LP"
         # legacy
         - avx512_f:
             features = "AVX512_F"
