KVM: Add PKU cpuid and cpuflags test cases
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -84,6 +84,8 @@
             flags = "avx512dq"
         - avx512_vl:
             flags = "avx512vl"
+        - pku:
+            flags = "pku"
         - tsc_deadline:
             flags = "tsc_deadline_timer"
             variants:
