--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -99,6 +99,8 @@
             features = "AVX512_DQ"
         - avx512_vl:
             features = "AVX512_VL"
+        - pku:
+            features = "PKU"
         - mwait:
             features = "MONITOR"
             cpu-pm = on
