KVM: Fix kselftest tool protection_keys compile issue
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/cpu_pku.cfg
+++ b/KVM/qemu/cpu_pku.cfg
@@ -9,8 +9,8 @@
     guest_dir = '/home/pku_test/'
     test_dir = '/tools/testing/selftests/mm/'
     kernel_repo = 'https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git'
-    compile_cmd = gcc -o protection_keys_64 -O2 -g -std=gnu99 -pthread -Wall protection_keys.c -lrt -ldl -lm -march=x86-64
-    run_cmd =  ./protection_keys_64
+    compile_cmd = gcc -o protection_keys -O2 -g -std=gnu99 -pthread -Wall protection_keys.c -lrt -ldl -lm -march=x86-64 -mxsave
+    run_cmd =  ./protection_keys
     tool_pre_compile = yes
     tool_pre_path = '/usr/libexec/kselftest/protection_keys_64'
     variants:
