Add ubuntu 24.04 docker based compile support
Add ubuntu 24.04 docker based compile with gcc-13 support for lkvs/amx
compile, with github CA certificates and safe directory for general git
submodule support for lkvs/ras compile

Signed-off-by: Hongyu Ning <hongyu.ning@intel.com>

--- a/BM/Makefile
+++ b/BM/Makefile
@@ -60,8 +60,15 @@ docker_test:
 docker_image:
 	docker build --build-arg PROXY=$(PROXY) -f ./Dockerfile.build -t ubuntu:22.04 .
 
+docker_image_ddt:
+	docker build --build-arg PROXY=$(PROXY) -f ./Dockerfile.build.ddt -t ubuntu:24.04 .
+
 docker_make:
 	docker run -it --rm -v $(PWD):/src -v /lib/modules/`uname -r`:/lib/modules/`uname -r` --name ubuntu_2204_lkvs ubuntu:22.04 make
+
+docker_make_ddt:
+	docker run -it --rm -v $(PWD)/..:/src -v /lib/modules/`uname -r`:/lib/modules/`uname -r` --name ubuntu_2404_lkvs ubuntu:24.04 \
+		bash -c "cd BM/ras && git submodule update --init --recursive && cd .. && make"
 
 build:
 	@echo "Building $(word 2, $(MAKECMDGOALS))"
