KVM: Add CWF NIs cpuid test cases
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -10,6 +10,15 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        # CWF
+        - sha512:
+            features = "SHA512"
+        - sm3:
+            features = "SM3"
+        - sm4:
+            features = "SM4"
+        - avx_vnni_int16:
+            features = "AVX_VNNI_INT16"
         # SRF
         - avx_ifma:
             features = "AVX_IFMA"
