KVM: Add GNR AVX10.1 cpuid test case
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -37,6 +37,9 @@
             features = "AMX_FP16"
         - prefetchi:
             features = "PREFETCHI"
+        - avx10_1:
+            features = "AVX10_1"
+            cpuid = "24 0 0 0 b 16 1, 24 0 0 0 b 17 1, 24 0 0 0 b 18 1, 24 0 0 0 b 0:7 1"
         # SPR
         - avx512_fp16:
             # The name should be same as the KEY/s in cpuid_info dictionary
