Add missed FRED KVM cases
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -19,6 +19,8 @@
         - amx:
             feature_dir_names = "amx"
             cmd_timeout = 500
+        - fred:
+            feature_dir_names = "fred"
     variants:
         - vm:
         - tdvm:
