--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -7,6 +7,9 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        # CWF
+        - fred:
+            flags = "fred"
         # SRF
         - lam:
             flags = "lam"
