--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -19,6 +19,10 @@
             features = "SM4"
         - avx_vnni_int16:
             features = "AVX_VNNI_INT16"
+        - fred:
+            features = "FRED"
+        - lkgs:
+            features = "LKGS"
         # SRF
         - avx_ifma:
             features = "AVX_IFMA"
