KVM: remove the guest boot cases with 1G memory and huge vCPUs
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/boot_check.cfg
+++ b/KVM/qemu/boot_check.cfg
@@ -32,6 +32,7 @@
             smp = 288
     variants:
         - 1G:
+            no 208_cpu, 256_cpu, 288_cpu
             mem = 1024
         - 4G:
             mem = 4096
