KVM: add nmi test without any debug parameter
Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/td_debug.cfg
+++ b/KVM/qemu/td_debug.cfg
@@ -12,9 +12,11 @@
     variants:
         - nmi:
             nmi = "yes"
-        - default:
+        - idle:
+            no default
             nmi = "no"
     variants:
+        - default:
         - debugon:
             vm_secure_guest_object_options = debug=on
         - debugoff:
