KVM: remove waitpkg tests for TD
Upstream kernel disabled TDX support for TSX and WAITPKG:
https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=6d415778f1069b52344f7cb09ae7b623579486c9

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/x86_cpu_flags.cfg
+++ b/KVM/qemu/x86_cpu_flags.cfg
@@ -110,6 +110,7 @@
             reboot_method = "shell"
         - tdvm:
             # TDVM doesn't support soft reboot
+            no waitpkg
             machine_type_extra_params = "kernel-irqchip=split"
             vm_secure_guest_type = tdx
             vga = std
