--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -123,5 +123,6 @@
     variants:
         - vm:
         - tdvm:
+            no waitpkg
             machine_type_extra_params = "kernel-irqchip=split"
             vm_secure_guest_type = tdx
