ras/mcelog: add mcelog util as a submodule at BM/ras/mcelog
Reported-by: kernel test robot <lkp@intel.com>
Signed-off-by: Yi Lai <yi1.lai@intel.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "BM/ras/ras-tools"]
 	path = BM/ras/ras-tools
 	url = https://git.kernel.org/pub/scm/linux/kernel/git/aegl/ras-tools.git
+[submodule "BM/ras/mcelog"]
+	path = BM/ras/mcelog
+	url = https://github.com/andikleen/mcelog.git
