KVM: Add NMI Source KVM cases
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -21,6 +21,8 @@
             cmd_timeout = 500
         - fred:
             feature_dir_names = "fred"
+        - nmis:
+            feature_dir_names = "nmis"
     variants:
         - vm:
         - tdvm:
