--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -23,6 +23,8 @@
             features = "FRED"
         - lkgs:
             features = "LKGS"
+        - nmis:
+            features = "NMIS"
         # SRF
         - avx_ifma:
             features = "AVX_IFMA"
