KVM: Add CWF PMU test cases for KVM
CWF PMU features:
Arch PEBS, Arch PerfMon v6, 3 new fix coutners

Signed-off-by: Xudong Hao <xudong.hao@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -8,6 +8,27 @@
     auto_cpu_model = "no"
     cpu_model = host
     variants:
+        - arch_pebs:
+            no tdvm
+            feature_dir_names = "pmu"
+            disable_parallel_run = yes
+            pre_command = 'echo 0 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel enable_mediated_pmu=Y'
+            post_command = 'echo 1 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel'
+            test_scen = "tests_arch_pebs"
+        - arch_perfmon_v6:
+            no tdvm
+            feature_dir_names = "pmu"
+            disable_parallel_run = yes
+            pre_command = 'echo 0 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel enable_mediated_pmu=Y'
+            post_command = 'echo 1 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel'
+            test_scen = "tests_arch_perfmon_v6"
+        - 3_fix_counters:
+            no tdvm
+            feature_dir_names = "pmu"
+            disable_parallel_run = yes
+            pre_command = 'echo 0 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel enable_mediated_pmu=Y'
+            post_command = 'echo 1 > /proc/sys/kernel/nmi_watchdog && modprobe -r kvm_intel && modprobe kvm_intel'
+            test_scen = "tests_3fix_counters"
         - cmpccxadd:
             feature_dir_names = "cmpccxadd"
         - lam:
