KVM/NMIS: remove NMIS TDX test, which is not supported
Signed-off-by: Farrah Chen <farrah.chen@intel.com>

--- a/KVM/qemu/feature_test.cfg
+++ b/KVM/qemu/feature_test.cfg
@@ -44,6 +44,7 @@
             feature_dir_names = "fred"
         - nmis:
             feature_dir_names = "nmis"
+            no tdvm
     variants:
         - vm:
         - tdvm:
