--- a/KVM/qemu/x86_cpuid.cfg
+++ b/KVM/qemu/x86_cpuid.cfg
@@ -25,6 +25,7 @@
             features = "LKGS"
         - nmis:
             features = "NMIS"
+            no tdvm
         # SRF
         - avx_ifma:
             features = "AVX_IFMA"
