KVM: migrate testcase vmx1_all_memory to boot_check

--- a/KVM/qemu/boot_check.cfg
+++ b/KVM/qemu/boot_check.cfg
@@ -32,11 +32,16 @@
     variants:
         - 1G:
             no 208_cpu, 256_cpu, 288_cpu
+            is_max_mem = no
             mem = 1024
         - 4G:
+            is_max_mem = no
             mem = 4096
         - 16G:
+            is_max_mem = no
             mem = 16384
+        - max_mem:
+            is_max_mem = yes
     variants:
         - vm:
         - tdvm:
